@@ -7,18 +7,22 @@ import hei.school.TD_K1.Exception.UnsupportedMediaTypeException;
 
 @Component
 public class GetStudentValidate {
-    public void getStudentHeaderValidate(String AcceptRequest){
-        if (AcceptRequest == null || AcceptRequest.isBlank()) {
+    public void getStudentHeaderValidate(String acceptRequest){
+   
+       
+        if (acceptRequest == null || acceptRequest.trim().isEmpty() ) {
             throw new StudentException("Le header Accept doit être requis");
             
-        }
+        }else{
+            boolean jsonVerified = acceptRequest.contains("text/plain") || acceptRequest.contains("application/json" ) ;
 
-        boolean jsonVerified = AcceptRequest.contains("text/plain") || AcceptRequest.contains("application/json");
-
-        if (!jsonVerified) {
-            throw new UnsupportedMediaTypeException("Format non supporté");
+            if (!jsonVerified) {
+            throw new StudentException("Format non supporté");
             
         }
+        }
+
+
     }
 
 
